force-app/main/default/objects/Muestras__c/Muestras__c.object-meta.xml
<CustomObject>
    <label>Muestra</label>
    <nameField>
        <label>Nombre de Muestra</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Muestras</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>