force-app/main/default/objects/Muestras__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <label>Cantidad Solicitada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>