force-app/main/default/objects/Muestras__c/fields/Contenido_Total_del_Producto__c.field-meta.xml
<CustomField>
    <fullName>Contenido_Total_del_Producto__c</fullName>
    <inlineHelpText>Es la presentación de venta o contenido del producto. Por ejemplo:
ELASTON ROJO 19 LT
La presentación de venta o el contenido es 19</inlineHelpText>
    <label>Presentación de Venta</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>