force-app/main/default/objects/Muestras__c/fields/Costo_de_la_muestra__c.field-meta.xml
<CustomField>
    <fullName>Costo_de_la_muestra__c</fullName>
    <formula>IF( UM_Texto__c = &quot;UN&quot;,( Costo__c * Cantidad__c ) , IF( UM_Texto__c = &quot;CARTA&quot;,(Cantidad__c * (Precio_unitario__c * 0.28)), IF(UM_Texto__c = &quot;MEDIA CARTA&quot;,(Cantidad__c * (Precio_unitario__c * 0.14)), IF(UM_Texto__c = &quot;CARTERA&quot;,(Cantidad__c * (Precio_unitario__c * 0.06)),( Precio_unitario__c * Cantidad__c )))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo total de la muestra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>