force-app/main/default/objects/Muestras__c/fields/Lista_de_precios_del__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_precios_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de precios</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Muestras</relationshipLabel>
    <relationshipName>Muestras_del</relationshipName>
    <type>Lookup</type>
</CustomField>