force-app/main/default/objects/Muestras__c/fields/Precio_unitario__c.field-meta.xml
<CustomField>
    <fullName>Precio_unitario__c</fullName>
    <formula>Costo__c  /  Contenido_Total_del_Producto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>