force-app/main/default/objects/Muestras__c/fields/Producto_del__c.field-meta.xml
<CustomField>
    <fullName>Producto_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Muestras</relationshipLabel>
    <relationshipName>Muestras_del</relationshipName>
    <type>Lookup</type>
</CustomField>