force-app/main/default/objects/Muestras__c/fields/Solicitud_de_muestra_del__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_muestra_del__c</fullName>
    <label>Solicitud de muestra</label>
    <referenceTo>SolicitudMuestra__c</referenceTo>
    <relationshipLabel>Muestras</relationshipLabel>
    <relationshipName>Muestras_del</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>