force-app/main/default/objects/Muestras__c/fields/Surtido__c.field-meta.xml
<CustomField>
    <fullName>Surtido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Definir si el producto fue surtido</description>
    <label>Surtido</label>
    <type>Checkbox</type>
</CustomField>