force-app/main/default/objects/Muestras__c/fields/UM__c.field-meta.xml
<CustomField>
    <fullName>UM__c</fullName>
    <label>UM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UN</fullName>
            </value>
            <value>
                <fullName>LT</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>M2</fullName>
            </value>
            <value>
                <fullName>CARTA</fullName>
            </value>
            <value>
                <fullName>MEDIA CARTA</fullName>
            </value>
            <value>
                <fullName>CARTERA</fullName>
            </value>
            <value>
                <fullName>CARTA COMPLETA</fullName>
                <isActive>false</isActive>
                <label>CARTA COMPLETA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>