force-app/main/default/objects/Muestras__c/fields/UM_Texto__c.field-meta.xml
<CustomField>
    <fullName>UM_Texto__c</fullName>
    <formula>TEXT( UM__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UM Texto</label>
    <type>Text</type>
</CustomField>